add background with text

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     </header>
     <main>
       <div>
-        <img src="images/landing.jpg" alt="landing image">
-       <h1> Music for everyone.</h1> <p>Spotify is now free on mobile, tablet and computer. Listen to the
-        right music, wherever you are.</p>
+        <img src="images/landing.jpg" alt="landing image" id="background-main">
+        <div id="absolute-text"><h1> Music for everyone.</h1> <p>Spotify is now free on mobile, tablet and computer. Listen to the
+        right music, wherever you are.</p></div>
       </div> 
       <div>
         <div>
