completed html and css

--- a/index.html
+++ b/index.html
@@ -26,33 +26,39 @@
         right music, wherever you are.</p></div>
       </div> 
       <div>
-        <div>
+        <div id="title-main2">
           <h2>What’s on Spotify?</h2> 
-         <div>
+        <div id="containers-info">
+         <div class="individual-container">
           <img src="images/music-icon.png" alt="music icon">
           <h3>Millions of Songs</h3> <p>There are millions of songs on Spotify</p>
         </div>
-        <div>
+        <div class="individual-container">
           <img src="images/high-quality-icon.png" alt="high quality icon">
           <h3>HD Music</h3>
           <p>Listen to music as if you were listening live</p>
         </div>
-        <div>
+        <div class="individual-container">
           <img src="images/devices-icon.png" alt="deivices icon">
           <h3>Stream Everywhere</h3> 
           <p>Stream music on your smartphone, tablet or computer</p>
-       </div>
+          </div>
+        </div>
       </div>
     </main>
     <footer>
-      <div>
-      <h2>hIt’s as yeezy as Kanye West.</h2> 
-        <h3>Search</h3> <p>Know what you want to listen to? Just search and hit play.</p> 
-        <h3>Browse</h3> <p>Check out the latest charts, brand new releases and great playlists for right now.</p>
-        <h3>Discover</h3> <p>Enjoy new music every Monday with your own personal playlist. Or sit back and enjoy Radio.</p>
-        <img src="images/spotify-icon-white.png" alt="spotify icon white">
-        <img src="images/spotify-app.jpg" alt="spotify app">
+      <div class="container">
+        <div id="left-content-footer">
+          <h2>It’s as yeezy as Kanye West.</h2> 
+          <h3>Search</h3> <p>Know what you want to listen to? Just search and hit play.</p> 
+          <h3>Browse</h3> <p>Check out the latest charts, brand new releases and great playlists for right now.</p>
+          <h3>Discover</h3> <p>Enjoy new music every Monday with your own personal playlist. Or sit back and enjoy Radio.</p>
+        </div>
+        <div id="footer-img">
+        <img src="images/spotify-icon-white.png" alt="spotify icon white" id="icon-white">
+        <img src="images/spotify-app.jpg" alt="spotify app" id="spotify-app-image">
       </div>
+    </div>
     </footer>
   </body>
 </html>
